# gwpycore

./: .gitignore  .sourcery.yaml  CONTRIBUTORS.adoc  DESCRIPTION.adoc  LICENSE  MANIFEST.in  README.adoc  make_browse.py  make_help.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
assets/: Harmonic_Dark.xcf  Isotope.xcf  Solarized_Light.xcf
doc/: CODE_OF_CONDUCT.adoc  GRUNTWORK.adoc  HOW_TO_CONFIG_INI.adoc  HOW_TO_FILTER_COMMANDS.adoc  HOW_TO_LOGGING.adoc  HOW_TO_SIMPLE_CONTROL_PANEL.adoc  HOW_TO_SWITCHES.adoc  INSTALL.adoc  QUICKSTART.adoc  USAGE.adoc
doc_technical/: BASH_CHEAT.adoc  CHANGE_LOG.adoc  CONTRIBUTING.adoc  DESIGN_NOTES.adoc  DEVELOPMENT_SETUP.adoc  PUBLISHING.adoc  PYQT5_CHEAT.adoc  PYTHON_CHEAT.adoc  PYTHON_VIRTUAL_ENVIRONMENTS.adoc  VIRTUAL_ENVIRONMENTS.adoc  VSCODE_TIPS.adoc  WINDOWS_CHEAT.adoc  makefile_help.txt
doc_technical/VSCode_Snippets/: kivy.json  python.json
examples/: assets_demo.py  assets_demo.ui  automate_notepad_control_panel.py  colorchart.kv  colorchart.py  general_example.ini  general_example.py  loading_themes.py  reindent.py  send_email.py  style_test.py  style_test.ui
examples/assets/help/: help.adoc  help.html
gwpycore/: __init__.py  gw_cli.py  gw_config.py  gw_datetime.py  gw_exceptions.py  gw_fonts.py  gw_gui.py  gw_logging.py  gw_misc.py  gw_strings.py
gwpycore/gw_basis/: gw_cli.py  gw_config.py  gw_exceptions.py  gw_logging.py  gw_versioning.py
gwpycore/gw_data/: gw_data_node.py  gw_fuzzy.py  gw_tree_node.py  gw_tree_node_visitor.py  gw_tree_tools.py
gwpycore/gw_functions/: gw_alphabet.py  gw_colors.py  gw_datetime.py  gw_numeric.py  gw_strings.py
gwpycore/gw_gui/: gw_gui_core_actions.py  gw_gui_dialogs.py  gw_gui_finger_tabs.py  gw_gui_fonts.py  gw_gui_icons.py  gw_gui_images.py  gw_gui_key_map.py  gw_gui_misc_controls.py  gw_gui_q_line_edit.py  gw_gui_simple_cp.py  gw_gui_skins.py  gw_gui_standard_app.py  gw_gui_svg.py  gw_gui_syntax.py  gw_gui_theme.py  gw_gui_tree_node.py
gwpycore/gw_windows_specific/: gw_fonts.py  gw_windows_behavior.py  gw_windows_printing.py
src/: __init__.py
src/gw_basis/: gw_config.py  gw_versioning.py
src/gw_data/: gw_tree_node.py  gw_tree_node_visitor.py  gw_tree_tools.py
src/gw_functions/: gw_datetime.py
src/gwpycore/: __init__.py
src/gwpycore/communications/: email.py
src/gwpycore/core/: __init__.py  booleans.py  cli.py  colors.py  config.py  datetime.py  datetime_utils.py  enums.py  environ.py  exceptions.py  files.py  folders.py  git.py  gw_cli.py  gw_colors.py  gw_config.py  gw_datetime.py  gw_exceptions.py  gw_files.py  gw_images.py  gw_logging.py  gw_numeric.py  gw_strings.py  installation.py  keystrokes.py  logging.py  numeric.py  strings.py  typing.py  typing_utils.py  versioning.py
src/gwpycore/data/: __init__.py  csv_utils.py  dict_database.py  field_defs.py  fuzzy.py  gw_fuzzy.py  gw_tree_node.py  tree_node.py
src/gwpycore/gui/: __init__.py  font_assets.py  gui_theme.py  gw_gui_theme.py
src/gwpycore/gw_basis/: __init__.py  gw_cli.py  gw_colors.py  gw_config.py  gw_datetime.py  gw_exceptions.py  gw_files.py  gw_images.py  gw_logging.py  gw_strings.py  gw_typing.py
src/gwpycore/gw_functions/: __init__.py  gw_alphabet.py
src/gwpycore/gw_gui/: __init__.py  gw_gui_theme.py
src/gwpycore/images/: face_detect.py  images.py
src/gwpycore/kivy/: __init__.py
src/gwpycore/kivy/app_support/: dialogs.py  main_window.py  screens.py
src/gwpycore/kivy/system_support/: kivy_exceptions.py
src/gwpycore/kivy/widgets/: background.py  button.py  camera.py  crop_tool.py  dropdown.py  hotkey.py  label.py  screen_widget.py
src/gwpycore/lexical/: wordplay.py  words.py
src/gwpycore/reportlab/: __init__.py  compose_pdf.py  gw_rl_fonts.py  rl_fonts.py
src/gwpycore/reportlab/flowables/: text_flowables.py
src/gwpycore/reportlab/templates/: id_badge.py  multi_column.py  page_sizes.py  sheet_labels.py
src/gwpycore/testing_utils/: __init__.py  logging_support.py
src/gwpycore/video/: __init__.py  cameras.py  gw_cameras.py
src/gwpycore/windows/: __init__.py  gw_windows_behavior.py  gw_windows_fonts.py  gw_windows_gui.py  gw_windows_printing.py  windows_behavior.py  windows_fonts.py  windows_gui.py  windows_printing.py
tests/: test_basic_cli_parser.py  test_colors.py  test_config.py  test_data_node.py  test_datetime.py  test_enums.py  test_exceptions.py  test_files.py  test_fonts.py  test_fuzzy.py  test_gui_finger_tabs.py  test_gui_key_map.py  test_gui_tree_node.py  test_logging.py  test_month_name.py  test_strings.py  test_tree_node.py  test_typing.py  test_uncaught.py  test_versioning.py  test_words.py
