# See https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# See https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = gwpycore
description = GruntWurk Core for Python (just another Python project framework)
author = Craig Jones
author_email = craig@k6nnl.com
license = BSD
license_files = LICENSE
long_description = file: DESCRIPTION.adoc
long_description_content_type = text; charset=UTF-8
url = https://github.com/gruntwurks/gwpycore
# Add here related links, for example:
# project_urls =
#    Documentation = https://pyscaffold.org/
#    Source = https://github.com/pyscaffold/pyscaffold/
#    Changelog = https://pyscaffold.org/en/latest/changelog.html
#    Tracker = https://github.com/pyscaffold/pyscaffold/issues
#    Conda-Forge = https://anaconda.org/conda-forge/pyscaffold
#    Download = https://pypi.org/project/PyScaffold/#files
#    Twitter = https://twitter.com/PyScaffold

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Natural Language :: English
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Application Frameworks



[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install gwpycore[PDF]` like:
reportlab = ReportLab
kivy = kivy

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    # pytest-cov

[options.entry_points]
console_scripts =
    install_font = gwpycore.fonts:do_install
    font_exists = gwpycore.fonts:do_font_exists


[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
# addopts =
#    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some people comaplain that a max line length of 150 is too wide to promote doing 
# side-by=-siid comparisons. So, we might consider dropping it to 88. That's the 
# default line length for Black (even though we stopped using the Black formatter).
# They found that "90-ish" optimally produces significantly shorter files without 
# compromising the ability to do side-by-side comparisons on older screen resolutions.
max_line_length = 150
extend_ignore =
    # F405 -- name may be undefined, or defined from star imports: module
    F405,
    # W291 -- trailing whitespace (Automatically removed by plugin so no need to report)
    W291,
    # W293 -- blank line contains whitespace (same)
    W293,
    # E203 -- is not PEP8 compliant, per
    #         https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices
    E203,
    # # H301: one import per line
    # H301,
    # # H306: imports not in alphabetical order (time, os)
    # H306,
    # # H401: docstring should not start with a space
    # H401,
    # # H403: multi line docstrings should end on a new line
    # H403,
    # # H404: multi line docstring should start without a leading new line
    # H404,
    # # H405: multi line docstring summary not separated with an empty line
    # H405,

exclude =
    .git,
    __pycache__,
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.5
package = gwpycore
